fix(backend): userエンドポイントでDBから取得をする (#80)
* user/me

* fix

* biome

* openapi

* mock側の修正+jwtのペイロードからnameを除去
